Update attachment tile css.

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -248,7 +248,7 @@ fieldset[disabled] .btn-link-light {
   margin:7px 7px 0 0;
   padding:5px;
   background:#F7F7F7;
-  border:1px solid #ddd;
+  border:1px solid #c9d1d6;
   border-radius:3px;
   float:left;
 }
