Fixed Edit button on project list: \App\Models\Projectuser::ACCESS_ADMIN

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -72,6 +72,10 @@ fieldset[disabled] .btn-link-light {
     display:inline-block;
   }
 }
+/* Modals */
+.modal-body {
+    //background:#F4F7F9;
+}
 
 /* Top Bar Links */
 .navbar-nav > li > a {
