--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4836,18 +4836,18 @@ a.list-group-item-danger.active:focus {
   border-bottom: 1px solid #eeeeee;
 }
 .panel-default {
-  border-color: #ddd;
+  border-color: #c9d1d6;
 }
 .panel-default > .panel-heading {
   color: #666;
   background-color: #f5f5f5;
-  border-color: #ddd;
+  border-color: #c9d1d6;
 }
 .panel-default > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #ddd;
+  border-top-color: #c9d1d6;
 }
 .panel-default > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #ddd;
+  border-bottom-color: #c9d1d6;
 }
 .panel-primary {
   border-color: #3e474f;
