--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -212,6 +212,11 @@ fieldset[disabled] .btn-link-light {
     margin-bottom:15px;
 }
 
+/* Tables */
+table {
+    font-size:1em;
+}
+
 /* Main content wrapper */
 .page-wrapper {
     position:absolute;
