--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -269,7 +269,7 @@ body {
     font-size: 14px;
     line-height: 1.428571429;
     color: #333333;
-    background-color: #F4F7F9;
+    background:#F4F7F9;
 }
 input,
 button,
