- Updated RFI create form. - Updated project navigation composer to keep nav active on extended URLs, ie rfis/create.

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -288,6 +288,9 @@ table {
 .control-label {
     color:#666;
 }
+.control-label-static {
+    color:#666;
+}
 .control-label-lg {
     font-size:1.1em;
     padding-top:8px;
