--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -270,6 +270,7 @@ fieldset[disabled] .btn-link-light {
     font-size:20px;
     line-height:30px;
     color:#666;
+    font-family:Lato, arial, helvetic, sans-serif;
     text-shadow:1px 1px #FFF;
 }
 .table-filters{
