--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -354,7 +354,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: Open Sans;
+    font-family:Lato, arial, helvetic, sans-serif;
     font-weight: 500;
     line-height: 1.1;
     color: inherit;
