--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -390,18 +390,19 @@ table {
 .attachment-tile {
     width:300px;
     margin:7px 7px 0 0;
-    padding:5px;
+    padding:6px;
     background:#F7F7F7;
     border:1px solid #c9d1d6;
     border-radius:3px;
     float:left;
 }
 .attachment-tile p.l1 {
-    font-size:0.85em;
+    font-size:0.9em;
     margin:0 0 0 22px;
+    line-height:22px;
 }
 .attachment-tile p.l2 {
-    font-size:0.75em;
+    font-size:0.8em;
     color:#666;
     margin:0 0 0 22px;
 }
@@ -410,7 +411,7 @@ span.filetype-sprite-small {
     width:18px;
     height:24px;
     display:block;
-    margin:2px 0 0 0;
+    margin:0 0 0 0;
     float:left;
 }
 .filetype-sprite-small.pdf { background:url('img/sprites/filetype-sprite-small.png') 0 0 no-repeat; }
