Almost done with DCR edit form. Need to fix multiple attachments on edit and create. Need to add ability to edit crews.  Then I will add ability to print to PDF and email.

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -7,6 +7,9 @@ body {
 .bold { font-weight:bold; }
 .pointer { cursor:pointer; }
 .btn-spacer-left { margin-left:8px; }
+.input-spacer-bottom { margin-bottom:10px; }
+.input-spacer-bottom:last-child { margin-bottom:0px; }
+
 .center {
     margin-left:auto;
     margin-right:auto;
