fixed new registration header bug when not joined with company.

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -2,7 +2,7 @@
 body {
     padding-top:51px;
     font-family:Lato, arial, helvetic, sans-serif;
-    overflow:hidden;
+    overflow-x:hidden;
 }
 
 .bold { font-weight:bold; }
