added date grouping to completed tasks, bold text when line is active, clear task info when add task input is active.

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -637,7 +637,7 @@ ul.sidebar-nav li a .glyphicon {
     background:#F4F7F9;
 }
 .taskline-active {
-    background:#F4F7F9;
+    font-weight: bold;
 }
 .taskline-active:hover {
     background:#F4F7F9;
